--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.wrapper {
+  padding-top: 20px;
+  margin: 0 auto;
+  width: 600px;
+}
+
+.rm {
+  background-color: rgb(119, 119, 148);
+  border-radius: 20px;
+  color: #fff;
+  border: none;
+}
+
+.done {
+  text-decoration: line-through;
+}
